--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
   </div>
 </div>
     {{#each data}}
-    <div class="card">
+    <div class="card text-center">
         <h5 class="card-header text-center title">{{title}}</h5>
         <div class="card-body">
            
