--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -7,7 +7,7 @@
         </div>
         <div class="card-body">
          
-                <button data-id="{{_id}}" class="btn btn-secondary dropdown-toggle comment-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                <button data-id="{{_id}}" class="btn btn-primary dropdown-toggle comment-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="true">
                     Comment
                 </button>
